<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121111"
    tools:context=".CounterTerroristFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/ct"
            android:textColor="#3953E3"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="110dp"
            android:layout_height="92dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/pistolfrag"
            app:layout_constraintEnd_toStartOf="@+id/imageView6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="110dp"
            android:layout_height="92dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/smg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pistol"
            android:textColor="#3953E3"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smg"
            android:textColor="#3953E3"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView6"
            app:layout_constraintStart_toStartOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="172dp"
            android:layout_height="104dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/rifle"
            app:layout_constraintEnd_toStartOf="@+id/imageView10"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="115dp"
            android:layout_height="104dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/defuse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView9"
            app:layout_constraintTop_toTopOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rifles"
            android:textColor="#3953E3"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView9"
            app:layout_constraintStart_toStartOf="@+id/imageView9"
            app:layout_constraintTop_toBottomOf="@+id/imageView9" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equipment"
            android:textColor="#3953E3"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView10"
            app:layout_constraintHorizontal_bias="0.596"
            app:layout_constraintStart_toStartOf="@+id/imageView10"
            app:layout_constraintTop_toBottomOf="@+id/imageView10" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="172dp"
            android:layout_height="95dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/shotgun"
            app:layout_constraintEnd_toStartOf="@+id/imageView13"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView8" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="129dp"
            android:layout_height="95dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/nade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView12"
            app:layout_constraintTop_toTopOf="@+id/textView9" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heavy"
            android:textColor="#3953E3"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView12"
            app:layout_constraintStart_toStartOf="@+id/imageView12"
            app:layout_constraintTop_toBottomOf="@+id/imageView12" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/granade"
            android:textColor="#3953E3"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView13"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="@+id/imageView13"
            app:layout_constraintTop_toBottomOf="@+id/imageView13" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>